[package]
name = "light-cli"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]
keywords = ["embedded-hal-crate", "cli", "serial", "terminal"]
categories = ["embedded", "no-std"]
description = "simple heapless command line interface parser for embedded devices"
repository = "https://github.com/rudihorn/light-cli"
license = "MIT OR Apache-2.0"

[dependencies]
nb = "0.1.1"
embedded-hal = "0.1.2"
heapless = "0.3.6"
