[package]
name = "light-cli"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]
keywords = ["embedded-hal-crate", "cli", "serial", "terminal"]
categories = ["embedded", "no-std"]
description = "simple heapless command line interface parser for embedded devices"
repository = "https://github.com/rudihorn/light-cli"
documentation = "https://rudihorn.github.io/light-cli/light_cli/index.html"
license = "MIT OR Apache-2.0"

[dependencies]
nb = "0.1.1"
embedded-hal = "0.1.2"
heapless = "0.3.6"

[target."thumbv7m-none-eabi".dev-dependencies]
cortex-m = "0.5.1"
panic-abort = "0.1.1"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", features = ["rt"] }

[features]
doc = []